# CIS456

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings
Game/: CMakeLists.txt
Game/src/: CollisionSystem.cpp  CollisionSystem.h  Components.h  DeathByYSystem.cpp  DeathByYSystem.h  DestructionNotificationSystem.h  EnemySpawningSystem.cpp  EnemySpawningSystem.h  Game.cpp  Game.h  GravitySystem.h  LifetimeSystem.h  MovementSystem.h  PlayerSystem.cpp  PlayerSystem.h  RandomWrapper.h  ShapeRenderingSystem.h  SpriteRenderingSystem.h  TorqueSystem.h  main.cpp
Game/src/Galaga/: CollisionSystem.cpp  CollisionSystem.h  Components.h  EnemyController.cpp  EnemyController.h  EnemyControllerSystem.cpp  EnemyControllerSystem.h  EnemySpawner.cpp  EnemySpawner.h  Galaga.cpp  Galaga.h  LifetimeSystem.h  MovementSystem.h  PlayerSystem.cpp  PlayerSystem.h  RandomWrapper.h  ScoreSystem.cpp  ScoreSystem.h  ShapeRenderingSystem.h  SpriteRenderingSystem.h  StarfighterSystem.cpp  StarfighterSystem.h
Mage/: CMakeLists.txt
Mage/src/Mage/: Mage.h
Mage/src/Mage/Core/: Application.cpp  Application.h  Color.cpp  Color.h  Core.cpp  Core.h  EventEnums.h  EventListenerBase.h  EventManager.cpp  EventManager.h  Exception.cpp  Exception.h  Log.cpp  Log.h  Window.cpp  Window.h  pch.h
Mage/src/Mage/IO/: AudioManager.cpp  AudioManager.h  Controller.cpp  Controller.h  IO.h
Mage/src/Mage/Renderer/: Camera.h  Font.cpp  Font.h  Renderer.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  ShapeRenderer.cpp  ShapeRenderer.h  SnowRenderer.cpp  SnowRenderer.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
Mage/src/Mage/Scene/: ComponentManager.cpp  ComponentManager.h  ComponentVector.h  Entity.h  EntityList.cpp  EntityList.h  EntityManager.cpp  EntityManager.h  Scene.h  System.cpp  System.h  SystemList.cpp  SystemList.h  SystemManager.cpp  SystemManager.h
enc_temp_folder/38597baa96dfd92995f9f6d3b7e28f19/: EnemySpawner.cpp
